# YOLODeploy

./: .gitignore  CMakeLists.txt  README.md  convert_model.sh  findlib.sh  image1.txt  yolov11_singlePicture
examples/: yolov11_singlePicture.cpp
include/: utils.hpp
include/backends/: atlas_backend.hpp  tensorrt_backend.hpp
include/core/: backend.hpp  base_model.hpp  base_model.inl  types.hpp
include/models/: yolov11_cls.hpp  yolov11_det.hpp  yolov11_obb.hpp
java/: ModelProcessor.cpp  ModelProcessor.h  ModelProcessor.java  README.md  com_jiayang_so_ModelProcessor.cpp  com_jiayang_so_ModelProcessor.h
src/: utils.cpp
src/backends/: tensorrt_backend.cpp
src/core/: backend.cpp  base_model.inl
src/models/: yolov11_cls.cpp  yolov11_det.cpp  yolov11_obb.cpp
